# Dictionary-Manager_BME_HF

./: CMakeLists.txt  Makefile  README.md
src/main/c/: main.c
